color materials & mesh refinement

--- a/storm/index.html
+++ b/storm/index.html
@@ -14,7 +14,8 @@
 
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> + <a href="https://www.blender.org/">blender</a> - <span style="color:red">Space to swap mode, backquote (`) to recenter camera. I created every model personally, so: All rights reserved, no stealeroni please.</span><br />
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> + <a href="https://www.blender.org/" target="_blank" rel="noopener">blender</a> - 
+			<a href="https://www.instagram.com/mapmotionrp/" target="_blank" rel="noopener">Original Map By mapmotionrp</a> - <span style="color:red">Space to swap mode, backquote (`) to recenter camera. I created every model personally, so: All rights reserved</span><br />
 			<span style="color:red">Flight Mode: WASD move, QE tilt, ArrowKeys/MouseDrag to 'look'. || </span>
 			<span style="color:red">Orbit Mode: Left Click Orbit, Right Click Pan, Middle Mouse Zoom.</span><br />
 		</div>
@@ -146,7 +147,7 @@
 
 				new GLTFLoader()
 					.setPath( 'gltf_models/' )
-					.load( 'enterthestorm_blocking_4.glb', function ( gltf ) {
+					.load( 'enterthestorm_details_1.glb', function ( gltf ) {
 
 						scene.add( gltf.scene );
 
