full geometry refinement pass

--- a/storm/index.html
+++ b/storm/index.html
@@ -147,7 +147,7 @@
 
 				new GLTFLoader()
 					.setPath( 'gltf_models/' )
-					.load( 'enterthestorm_details_2.glb', function ( gltf ) {
+					.load( 'enterthestorm_full_geo.glb', function ( gltf ) {
 
 						scene.add( gltf.scene );
 
