include RF in axis move help tip

--- a/storm/index.html
+++ b/storm/index.html
@@ -16,7 +16,7 @@
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> + <a href="https://www.blender.org/" target="_blank" rel="noopener">blender</a> - 
 			<a href="https://www.instagram.com/mapmotionrp/" target="_blank" rel="noopener">Original Map By mapmotionrp</a> - <span style="color:red">Space to swap mode, backquote (`) to recenter camera, (1) to toggle fog. I created every model personally, so: All rights reserved</span><br />
-			<span style="color:red">Flight Mode: WASD move, QE tilt, ArrowKeys/MouseDrag to 'look'. || </span>
+			<span style="color:red">Flight Mode: WASDRF move on axis, QE tilt, ArrowKeys/MouseDrag to 'look'. || </span>
 			<span style="color:red">Orbit Mode: Left Click Orbit, Right Click Pan, Middle Mouse Zoom.</span><br />
 		</div>
 
